--- a/.releaserc.json
+++ b/.releaserc.json
@@ -7,6 +7,9 @@
     }
   ],
   "preset": "conventionalcommits",
+  "tagFormat": "v${version}",
+  "repositoryUrl": "https://github.com/mihazs/clockify-auto-fill.git",
+  "debug": false,
   "plugins": [
     [
       "@semantic-release/commit-analyzer",
@@ -145,7 +148,10 @@
             "label": "Distribution tarball"
           }
         ],
-        "addReleases": "bottom"
+        "addReleases": "bottom",
+        "successComment": "🎉 This ${issue.pull_request ? 'PR is included' : 'issue has been resolved'} in version ${nextRelease.version} 🎉\n\nThe release is available on [GitHub release](${releases.filter(release => release.name === 'GitHub')[0].url}) and [npm package](https://www.npmjs.com/package/clockify-auto-fill).",
+        "labels": ["released"],
+        "releasedLabels": ["released"]
       }
     ],
     [
