--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     
     strategy:
       matrix:
-        node-version: [16.x, 18.x, 20.x]
+        node-version: [20.x, 22.x]
     
     steps:
       - name: Checkout code
@@ -38,7 +38,7 @@ jobs:
       
       - name: Upload coverage reports
         uses: codecov/codecov-action@v3
-        if: matrix.node-version == '18.x'
+        if: matrix.node-version == '20.x'
         with:
           file: ./coverage/lcov.info
           fail_ci_if_error: false
@@ -51,10 +51,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
-      - name: Use Node.js 18
+      - name: Use Node.js 20
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           cache: 'npm'
       
       - name: Install dependencies
