--- a/package.json
+++ b/package.json
@@ -44,7 +44,10 @@
     "@types/node": "^24.3.0",
     "@types/pdfkit": "^0.17.2",
     "@types/sqlite3": "^3.1.11",
+    "@typescript-eslint/eslint-plugin": "^8.41.0",
+    "@typescript-eslint/parser": "^8.41.0",
     "conventional-changelog-conventionalcommits": "^8.0.0",
+    "eslint": "^9.34.0",
     "jest": "^30.1.1",
     "semantic-release": "^23.0.0",
     "ts-jest": "^29.4.1",
