chore: update permissions in release workflow for npm publishing and semantic-release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,8 @@ jobs:
       id-token: write # Needed for npm provenance
       issues: write   # Needed to comment on released issues
       pull-requests: write # Needed to comment on released PRs
+      packages: write # Needed for npm publishing
+      actions: read   # Needed for semantic-release
 
     steps:
       - name: Checkout code
