--- a/.releaserc.json
+++ b/.releaserc.json
@@ -149,9 +149,9 @@
           }
         ],
         "addReleases": "bottom",
-        "successComment": "🎉 This ${issue.pull_request ? 'PR is included' : 'issue has been resolved'} in version ${nextRelease.version} 🎉\n\nThe release is available on [GitHub release](${releases.filter(release => release.name === 'GitHub')[0].url}) and [npm package](https://www.npmjs.com/package/clockify-auto-fill).",
-        "labels": ["released"],
-        "releasedLabels": ["released"]
+        "successComment": "🎉 This ${issue.pull_request ? 'PR is included' : 'issue has been resolved'} in version ${nextRelease.version} 🎉",
+        "labels": false,
+        "releasedLabels": false
       }
     ],
     [
